--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,54 @@
 .App {
-  /*text-align: center;*/
+  
   width: 80%;
   margin:auto;
 }
 
 
+.card {
+  
+    width: 25%;
+    border:solid #E5E5E5 1px;
+    padding:10px;
+    margin:10px 20px;
+    text-align:center;
+    display: inline-block;
+    border-radius:0.5em;
+  
+}
+.cardFoto{
+  
+  width: 50px; 
+  height:50px;
+  margin:auto; 
+  background-color:#E5E5E5; 
+  border-radius:50%; 
+  border:solid #E5E5E5 1px;
 
-
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+.buttonStyle {
+  padding: 5px;
+  background-color:#4185F3;
+  color:white;
+  border-radius:0.5em;
+  width:60%;
+  border:none;
+  margin:25px 0px 0px;
+  text-decoration:none;
 }
 
-.App-link {
-  color: #61dafb;
+.userdetail{
+  border:solid grey 1px;
+  margin:100px auto;
+  width:40%;
+  padding:15px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .card{
+    width:80%;
+    padding:100px 0px;
   }
-  to {
-    transform: rotate(360deg);
-  }
 }
- */
